# nntrainer

./: .gitignore  .gitmodules  README.md  meson.build  meson_options.txt
.claude/plans/: HMX_OPS_PLAN.md  htp-kernel-roadmap-hexkl.plan.md  sdkl-offline-wh-conversion.plan.md
.github/workflows/: cpp_linter.yml  static.check.yml
Applications/: meson.build
Applications/CausalLM/: README.md  build_android.sh  build_tokenizer_windows.ps1  chat_template.cpp  chat_template.h  factory.h  install_android.sh  main.cpp  meson.build  quantize.cpp  safetensors_info.cpp  stb_image.inc  tokenizers_cpp.h
Applications/CausalLM/api/: causal_lm_api.cpp  quick_dot_ai_api.cpp  quick_dot_ai_api.h
Applications/CausalLM/jni/: Android.mk
Applications/CausalLM/layers/: causal_conv1d_layer.cpp  causal_conv1d_layer.h  causallm_common_properties.h  custom_multiply.cpp  custom_multiply.h  deberta_attention_layer.cpp  deberta_attention_layer.h  embedding_layer.cpp  embedding_layer.h  embedding_normalize_layer.h  embedding_pooling_layer.cpp  embedding_pooling_layer.h  lm_head.cpp  lm_head.h  logit_softcapping.cpp  logit_softcapping.h  meson.build  mha_core.cpp  mha_core.h  per_layer_slice.cpp  per_layer_slice.h  qkv_layer.cpp  reshaped_rms_norm.cpp  reshaped_rms_norm.h  rms_norm.cpp  rms_reverse_norm.cpp  rms_reverse_norm.h  scalar_multiply.cpp  scalar_multiply.h  shared_fully_connected_layer.cpp  shared_fully_connected_layer.h  tie_word_embedding.cpp  tie_word_embedding.h
Applications/CausalLM/models/: causal_lm.cpp  causal_lm.h  meson.build  performance_metrics.h  sentence_transformer.cpp  sentence_transformer.h  tokenizer_loader.cpp  tokenizer_loader.h  transformer.cpp  transformer.h
Applications/CausalLM/models/bert/: bert_transformer.cpp  bert_transformer.h  meson.build  multilingual_tinybert_16mb.cpp  multilingual_tinybert_16mb.h
Applications/CausalLM/models/deberta_v2/: deberta_v2.cpp  deberta_v2.h  meson.build
Applications/CausalLM/models/gemma3/: function.cpp  gemma3_causallm.cpp  gemma3_causallm.h
Applications/CausalLM/models/gemma4/: gemma4_causallm.cpp  gemma4_causallm.h  meson.build
Applications/CausalLM/models/gpt_oss/: gpt_oss_moe_layer.h
Applications/CausalLM/models/gpt_oss_cached_slim/: gpt_oss_moe_layer_cached.cpp  gpt_oss_moe_layer_cached.h
Applications/CausalLM/models/lfm2/: lfm2_causallm.cpp  lfm2_causallm.h  meson.build
Applications/CausalLM/models/qwen3/: qwen3_causallm.cpp
Applications/CausalLM/models/qwen3_cached_slim_moe/: qwen_moe_layer_cached.cpp  qwen_moe_layer_cached.h
Applications/CausalLM/models/qwen3_moe/: qwen_moe_layer.h
Applications/CausalLM/models/qwen3_slim_moe/: qwen_moe_layer_fsu.h
Applications/CausalLM/models/timm_vit/: meson.build  timm_vit_transformer.cpp  timm_vit_transformer.h
Applications/CausalLM/res/deberta_v2/: weight_converter.py
Applications/CausalLM/res/gemma3/: weight_converter.py
Applications/CausalLM/res/qwen2/qwen2-0.5b/: weight_converter.py
Applications/CausalLM/res/qwen3/qwen3-4b/: nntr_config_hmx.json  weight_converter.py  weight_converter_hmx.py
Applications/CausalLM/res/tiny-bert/: nntr_config.json
Applications/CausalLM/res/vit/: weight_converter.py
Applications/CausalLM/res/vit/timm_vit_base_patch16_siglip_224/: nntr_config.json
Applications/CausalLM/tokenizers/: bpe_tokenizer.cpp  tokenizer_cache_util.h  wordpiece_tokenizer.cpp
Applications/CausalLM/tokenizers_c_win/: Cargo.toml
Applications/CausalLM/tokenizers_c_win/src/: lib.rs
Applications/ProductRatings/jni/: main.cpp
api/: nntrainer-api-common.h
api/ccapi/include/: common.h  model.h
api/ccapi/src/: tensor_api_graph.cpp
debian/: nntrainer-dev.install
docs/: how-to-build-and-test-htp-backend.md  how-to-use-htp-backend.md  htp-tensor-formation-analysis.md
nntrainer/: app_context.cpp  engine.cpp  engine.h  mem_allocator.cpp  mem_allocator.h  meson.build  nntrainer_log.h
nntrainer/layers/: activation_layer.cpp  activation_layer.h  addition_layer.cpp  addition_layer.h  bn_layer.cpp  bn_layer.h  common_properties.cpp  fc_layer.cpp  fc_layer.h  input_layer.cpp  layer_devel.h  layer_node.cpp  layer_node.h  layer_normalization_layer.cpp  multiply_layer.cpp  multiply_layer.h
nntrainer/models/: neuralnet.cpp  neuralnet.h
nntrainer/tensor/: float_tensor.cpp  manager.h  memory_pool.h  meson.build  q4_0_utils.cpp  q4_0_utils.h  tensor.cpp  tensor.h  tensor_pool.cpp  tensor_pool.h
nntrainer/tensor/cpu_backend/: cpu_backend.h
nntrainer/tensor/dsp_backend/: .gitignore  CMakeLists.txt  README.md  build_dsp.sh  meson.build
nntrainer/tensor/dsp_backend/htp/: commu.c
nntrainer/tensor/htp_backend/: .gitignore  BUILD.md  CMakeLists.txt  README.md  build_dsp.sh  build_htp.sh  htp_interface.h  meson.build  run.sh
nntrainer/tensor/htp_backend/host/: op_export.c  session.c  test.c
nntrainer/tensor/htp_backend/htp/: commu.c  hmx_mgr.c  mmap_mgr.cc  op_executor.cc  op_tests.cc  power.c  vtcm_mgr.cc  worker_pool.c
nntrainer/tensor/htp_backend/htp/hmx_ops/: flash_attn.c  flash_attn_sp_hdim.c  mat_mul.c
nntrainer/tensor/htp_backend/htp/hvx_ops/: mm_benchmark.c  precompute_table.c  rms_norm.c
nntrainer/tensor/htp_backend/include/: htp_ops.idl  op_reg.h  sdkl_interface.h
nntrainer/tensor/htp_backend/include/host/: htp_ops.h  htp_ops_skel.c  htp_ops_stub.c  op_export.h  session.h
nntrainer/tensor/htp_backend/include/htp/: hvx_convert.h  hvx_math.h  ops.h  quants.h
nntrainer/utils/: base_properties.h  meson.build  node_exporter.cpp  node_exporter.h  safetensors_util.cpp  safetensors_util.h  thread_manager.cpp  thread_manager.h  thread_manager_util.cpp  thread_manager_util.h
packaging/: nntrainer.spec
test/ccapi/: unittest_ccapi_tensor.cpp
test/jni/: Android.mk
test/unittest/: meson.build  unittest_htp_kernels.cpp  unittest_nntrainer_cpu_backend.cpp  unittest_safetensor_quantize.cpp
test/unittest/htp/: meson.build  unittest_htp_common.cpp  unittest_htp_common.h  unittest_htp_mat_mul.cpp  unittest_htp_quantizer.cpp  unittest_htp_rms_norm.cpp
tools/: android_test.sh  package_android.sh  run_qwen3_0_6b_x86_inference.sh
(+18 files in other folders)
